class List, state, babel plugin proposal class properties installed

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 body{
-  background-color: aqua;
-  color: black;
+  background-color: brown;
+  color: white;
   font-family: sans-serif;
+  font-weight:bold;
+  font-size: 20px;
 }
